gmp-clearkey doesn't work if the binary is called something other than "firefox"
Categories
(Core :: Audio/Video: GMP, defect)
Tracking
()
People
(Reporter: jcristau, Assigned: glandium)
References
Details
Crash Data
Attachments
(3 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-esr115+
|
Details | Review |
Initially reported at https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1069683:
It seems that the gmp code does not expect the executable to be called something other than firefox:
GMPChild::MakeCDMHostVerificationPaths calls AppendHostPath with /usr/lib/firefox-esr/firefox, but that file doesn't exist, so AppendHostPath fails, and we end up calling into VerifyCdmHost_0 with aNumFiles==2, which fails the assertion that it's equal to NumExpectedHostFiles (4).
Initially seen with Debian's "firefox-esr" package, where the binary is /usr/lib/firefox-esr/firefox-esr; Mike suggested I file this upstream since it could affect others like seamonkey.
| Assignee | ||
Comment 1•2 years ago
|
||
This probably should use MOZ_APP_NAME. I don't think we have anything returning the executable name in the directory service, although it would be convenient to avoid the platform-specific stuff.
| Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
| Reporter | ||
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D208311
Updated•2 years ago
|
| Assignee | ||
Comment 5•2 years ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D208311
Updated•2 years ago
|
Comment 6•2 years ago
|
||
beta Uplift Approval Request
- User impact if declined: CDM doesn't work properly when application name is not firefox
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: N/A
- Risk associated with taking this patch: Low
- Explanation of risk level: It's a no-op for mozilla builds
- String changes made/needed: N/A
- Is Android affected?: no
Comment 7•2 years ago
|
||
esr115 Uplift Approval Request
- User impact if declined: CDM doesn't work properly when application name is not firefox
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: N/A
- Risk associated with taking this patch: Low
- Explanation of risk level: It's a no-op for mozilla builds
- String changes made/needed: N/A
- Is Android affected?: no
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 10•2 years ago
|
||
:glandium this failed to land on ESR115. If you could take a look?
https://lando.services.mozilla.com/D208456/
| Assignee | ||
Comment 11•2 years ago
|
||
(In reply to Donal Meehan [:dmeehan] from comment #10)
:glandium this failed to land on ESR115. If you could take a look?
https://lando.services.mozilla.com/D208456/
Refreshed the patch.
Comment 12•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Description
•