Bug 1892887 - Use MOZ_APP_NAME and XUL_DLL in GMPChild::MakeCDMHostVerificationPaths.  a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D208456